<resources>
    <string name="app_name" translatable="false">ChatKT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_page_message">Welcome to CHATKT</string>
    <string name="welcome_page_next_button">Next</string>
    <string name="welcome_page_content_description" translatable="false">Welcome page Logo</string>
    <string name="welcome_page_username_input">Enter a username…</string>
    <string name="welcome_page_username_view">Enter a username to sign up</string>
    <string name="welcome_page_connect_button">Sign Up</string>
    <string name="tab_item_messages">Messages</string>
    <string name="tab_item_contacts">Contacts</string>
    <string name="action_search">Search</string>
    <string name="action_parameters">Parameters</string>
    <string name="welcome_string">Welcome</string>

</resources>